--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
@@ -14,52 +14,43 @@
 {% block body_block %}
 <!-- Main Container
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<div class="container-fluid">    
-    <div class="row">
-        <div class="col no-padding-col">
-            <!-- Map div
-            –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-            <div id="map"></div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col no-padding-col">
-            <!-- Timeline div
-            –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-            <div class="timeline-wrapper container-fluid">
-                <div class="row">
-                    <div id="timeline-toggle" class='timeline-toggle col-xl-3'>
-                        <h2>Timeline of studies</h2>
-                        <span class="timeline-switch">
+<div class='mt-32-75 h-screen'>    
+    <!-- Map div
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <div id="map" class=""></div>
+    <!-- Timeline div
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <div class="timeline-wrapper container-fluid">
+        <div class="row">
+            <div id="timeline-toggle" class='timeline-toggle col-xl-3'>
+                <h2>Timeline of studies</h2>
+                <span class="timeline-switch">
 
-                            <input type="checkbox" id="timeline-switch" name="timeline-switch" {% if timeline_type == "studied" %}checked{% endif %}>
+                    <input type="checkbox" id="timeline-switch" name="timeline-switch" {% if timeline_type == "studied" %}checked{% endif %}>
 
-                            <label for="timeline-switch">
-                                {% if timeline_type == "published" %}
-                                    <strong>Year published</strong>
-                                {% else %}
-                                    Year published
-                                {% endif %}
-                            </label>
-                            <span class="timeline-switch-knob"></span>
-                        </span>
-                        <span>
-                            {% if timeline_type == "studied" %}
-                                <strong>Year(s) studied</strong>
-                            {% else %}
-                                Year(s) studied
-                            {% endif %}
-                        </span>
-                        {% if last_updated_on != "" %}
-                            <div>
-                                Data last updated on {{last_updated_on}}
-                            </div>
+                    <label for="timeline-switch">
+                        {% if timeline_type == "published" %}
+                            <strong>Year published</strong>
+                        {% else %}
+                            Year published
                         {% endif %}
+                    </label>
+                    <span class="timeline-switch-knob"></span>
+                </span>
+                <span>
+                    {% if timeline_type == "studied" %}
+                        <strong>Year(s) studied</strong>
+                    {% else %}
+                        Year(s) studied
+                    {% endif %}
+                </span>
+                {% if last_updated_on != "" %}
+                    <div>
+                        Data last updated on {{last_updated_on}}
                     </div>
-                    <div id="timeline" class='ui-brush timeline col-xl-9'></div>
-                </div>
+                {% endif %}
             </div>
-
+            <div id="timeline" class='ui-brush timeline col-xl-9'></div>
         </div>
     </div>
 </div>
