TTWWW-466: Removing testing style from tailwind config, adding screenreader text to TT logo 	modified:   spectrum/autism_prevalence_map/static/autism_prevalence_map/tailwind.config.js 	modified:   spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
@@ -71,8 +71,9 @@
 
     <nav class="navbar navbar-expand-xl fixed-top navbar-light spectrum-gradient">
         <div class="left">
-            <a class="navbar-brand" href="https://spectrumnews.org/">
+            <a class="navbar-brand" href="https://www.thetransmitter.org/">
                 {% svg 'transmitter-logo' %}
+                <span class='sr-only'>The Transmitter</span>
             </a>
         </div>
         <div class="middle">
