TTWWW-506: Changes from code review and a little more Including - chaning Spectrum URLs to Transmitter ones, including in the header - locally hosting the stylesheet used for the About page - removing unused Mailchimp / newsletter codes 	modified:   spectrum/autism_prevalence_map/static/autism_prevalence_map/css/about.css 	new file:   spectrum/autism_prevalence_map/static/autism_prevalence_map/css/spectrum.min.css 	modified:   spectrum/autism_prevalence_map/static/autism_prevalence_map/js/about.js 	modified:   spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html 	modified:   spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
@@ -94,7 +94,7 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <nav class="navbar navbar-expand-xl fixed-top navbar-light spectrum-gradient">
         <div class="left">
-            <a class="navbar-brand" href="https://spectrumnews.org/">
+            <a class="navbar-brand" href="https://www.thetransmitter.org/">
                 <img src="{% static 'autism_prevalence_map/img/spectrum-logo-white.png' %}" width="auto" height="40" class="d-inline-block" alt="">
             </a>
         </div>
