--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
@@ -7,7 +7,7 @@
 {% block css_block %}
 <!-- Custom map CSS
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<link rel="stylesheet" id="spectrum-style-css"  href="https://www.spectrumnews.org/wp-content/themes/sfari-spectrum/css/spectrum.min.css?ver=2.0.2" type="text/css" media="all" />
+<link rel="stylesheet" id="spectrum-style-css"  href="{% static 'autism_prevalence_map/css//spectrum.min.css' %}" type="text/css" media="all" />
 <link rel="stylesheet" type="text/css" href="{% static 'autism_prevalence_map/css/about.css' %}">
 {% endblock %}
 
@@ -36,7 +36,7 @@
             <div id="wp-content">
                 <div id="1" class="chapter-start"></div>
                 <h2 id="about">About the map:</h2>
-                <p>This map was created by the team at <a href="https://www.spectrumnews.org/"><i>Spectrum</i></a>, the leading source of news and expert opinion on autism research. (<a href="https://www.spectrumnews.org/newsletter">Subscribe to our newsletters</a>.)</p>
+                <p>This map was created by the team at <a href="https://www.thetransmitter.org/"><i>Spectrum</i></a>, the leading source of news and expert opinion on autism research. (<a href="https://www.thetransmitter.org/newsletters-alerts/">Subscribe to our newsletters</a>.)</p>
                 <p>The map features a collection of studies on autism prevalence around the world. It highlights places where information is available — and places where information is missing.</p>
                 <p>Each dot on the map represents a study. To identify these studies, we relied on our expert advisers. The darker dots represent studies that are recommended by the advisors for one or more reasons — although these studies may still be flawed in other aspects.</p>
                 <p>We plan to update the map with new studies as they become available.</p>
@@ -83,20 +83,20 @@
                 ASD — autism spectrum disorder</p>
                 <div id="3" class="chapter-start"></div>
                 <h2 id="how-to-cite">How to cite the map:</h2>
-                <p>Please include a statement in your article or on your website that indicates that you retrieved the information from <a href="https://prevalence.spectrumnews.org">prevalence.spectrumnews.org</a>. And if you refer to it by name, please call it the “global map of autism prevalence by <em>Spectrum</em>.”</p>
+                <p>Please include a statement in your article or on your website that indicates that you retrieved the information from <a href="https://autismprevalence.thetransmitter.org/">autismprevalence.thetransmitter.org</a>. And if you refer to it by name, please call it the “global map of autism prevalence by <em>Spectrum</em>.”</p>
                 <div id="4" class="chapter-start"></div>
                 <h2 id="more-info">More information:</h2>
                 <p>Here is a selection of <i>Spectrum</i> articles on autism prevalence.</p>
-                <p><a href="https://www.spectrumnews.org/news/study-quantifies-prevalence-autism-india/">Study quantifies prevalence of autism in India </a><br>
-                <a href="https://www.spectrumnews.org/news/new-report-shows-slight-uptick-autism-prevalence/">New report shows slight uptick in autism prevalence</a><br>
-                <a href="https://www.spectrumnews.org/news/prevalence-autism-u-s-remains-steady-new-data-suggest/">Prevalence of autism in U.S. remains steady, new data suggest</a><br>
-                <a href="https://www.spectrumnews.org/news/school-survey-india-reveals-low-autism-prevalence/">School survey in India reveals low autism prevalence</a><br>
-                <a href="https://www.spectrumnews.org/news/u-s-stats-show-autism-rate-reaching-possible-plateau/">U.S. stats show autism rate reaching possible plateau</a><br>
-                <a href="https://www.spectrumnews.org/news/new-spike-in-autism-numbers-may-reflect-rise-in-awareness/">New spike in autism numbers may reflect rise in awareness</a><br>
-                <a href="https://www.spectrumnews.org/opinion/prevalence-perturbed/">Prevalence perturbed</a><br>
-                <a href="https://www.spectrumnews.org/news/clinical-research-israeli-study-shows-high-autism-prevalence/">Clinical research: Israeli study shows high autism prevalence</a><br>
-                <a href="https://www.spectrumnews.org/opinion/rising-rates/">Rising rates</a><br>
-                <a href="https://www.spectrumnews.org/news/study-finds-high-rate-of-autism-in-south-korea/">Study finds high rate of autism in South Korea</a></p>
+                <p><a href="https://www.thetransmitter.org/spectrum/study-quantifies-prevalence-autism-india/">Study quantifies prevalence of autism in India </a><br>
+                <a href="https://www.thetransmitter.org/spectrum/new-report-shows-slight-uptick-autism-prevalence/">New report shows slight uptick in autism prevalence</a><br>
+                <a href="https://www.thetransmitter.org/spectrum/prevalence-autism-u-s-remains-steady-new-data-suggest/">Prevalence of autism in U.S. remains steady, new data suggest</a><br>
+                <a href="https://www.thetransmitter.org/spectrum/school-survey-india-reveals-low-autism-prevalence/">School survey in India reveals low autism prevalence</a><br>
+                <a href="https://www.thetransmitter.org/spectrum/u-s-stats-show-autism-rate-reaching-possible-plateau/">U.S. stats show autism rate reaching possible plateau</a><br>
+                <a href="https://www.thetransmitter.org/spectrum/new-spike-in-autism-numbers-may-reflect-rise-in-awareness/">New spike in autism numbers may reflect rise in awareness</a><br>
+                <a href="https://www.thetransmitter.org/spectrum/prevalence-perturbed/">Prevalence perturbed</a><br>
+                <a href="https://www.thetransmitter.org/spectrum/clinical-research-israeli-study-shows-high-autism-prevalence/">Clinical research: Israeli study shows high autism prevalence</a><br>
+                <a href="https://www.thetransmitter.org/spectrum/rising-rates/">Rising rates</a><br>
+                <a href="https://www.thetransmitter.org/spectrum/study-finds-high-rate-of-autism-in-south-korea/">Study finds high rate of autism in South Korea</a></p>
                 <div id="5" class="chapter-start"></div>
                 <h2 id="team">The team:</h2>
                 <h3><em>Spectrum</em> Team</h3>
@@ -104,19 +104,19 @@
                     <h4>Apoorva Mandavilli</h4>
                     <h5>Editor-in-Chief, <i>Spectrum</i></h5>
                     <p>Apoorva Mandavilli created <i>Spectrum</i> and conceived of the global prevalence map. She oversees the site’s operations.<br>
-                    <a href="https://www.spectrumnews.org/author/apoorvamandavilli/">More</a></p>
+                    <a href="https://www.thetransmitter.org/contributor/apoorva-mandavilli/">More</a></p>
                 </div>
                 <div class="bio">
                     <h4>Nicholette Zeliadt</h4>
                     <h5>Senior News Writer, <i>Spectrum</i></h5>
                     <p>Nicholette Zeliadt reports and writes news and features about autism research. She led the map’s build on the editorial side.<br>
-                    <a href="https://www.spectrumnews.org/author/nicholettezeliadt/">More</a></p>
+                    <a href="https://www.thetransmitter.org/contributor/nicholette-zeliadt/">More</a></p>
                 </div>
                 <div class="bio">
                     <h4>Rebecca Horne</h4>
                     <h5>Multimedia Director, <i>Spectrum</i></h5>
                     <p>Rebecca Horne oversees and directs all multimedia on <i>Spectrum</i>. She commissioned and oversees the map’s design.<br>
-                    <a href="https://www.spectrumnews.org/author/rebeccahorne/">More</a></p>
+                    <a href="https://www.thetransmitter.org/contributor/rebecca-horne/">More</a></p>
                 </div>
                 <div class="bio">
                     <h4>Michael Kranz</h4>
@@ -132,38 +132,38 @@
                     <h4>Hope Vanderberg</h4>
                     <h5>Copy Chief</h5>
                     <p>Hope Vanderberg edits articles on <i>Spectrum</i> for grammar and accuracy.<br>
-                    <a href="https://www.spectrumnews.org/author/hvanderberg/">More</a></p>
+                    <a href="https://www.thetransmitter.org/contributor/hope-vanderberg/">More</a></p>
                 </div>
                 <h3>Project Advisers</h3>
                 <div class="bio">
                     <h4>Gauri Divan</h4>
                     <h5>Director of the child development group, Sangath</h5>
                     <p>Gauri Divan is director of the child development group at Sangath, a nonprofit organization in Goa, India. She has also been a member of the World Health Organization’s technical consultative group for autism and developmental disorders.<br>
-                    <a href="https://www.spectrumnews.org/author/gauridivan/">More</a></p>
+                    <a href="https://www.thetransmitter.org/contributor/gauri-divan/">More</a></p>
                 </div>
                 <div class="bio">
                     <h4>Maureen Durkin</h4>
                     <h5>Professor of population health sciences, University of Wisconsin-Madison</h5>
                     <p>Maureen Durkin is professor and chair of population health sciences and Waisman Center investigator at the University of Wisconsin-Madison. She is a principal investigator in the Autism and Developmental Disabilities Monitoring Network and other projects related to public health surveillance, epidemiology and care integration of autism and other developmental disabilities.<br>
-                    <a href="https://www.spectrumnews.org/author/maureendurkin/">More</a></p>
+                    <a href="https://www.thetransmitter.org/contributor/maureen-durkin/">More</a></p>
                 </div>
                 <div class="bio">
                     <h4>Mayada Elsabbagh</h4>
                     <h5>Assistant professor of neurology and neurosurgery, McGill University</h5>
                     <p>Mayada Elsabbagh is assistant professor of neurology and neurosurgery at McGill University in Montreal, Canada. She is also active in global efforts to improve evidence-based practice in the autism community and capacity-building in low- and middle-income countries.<br>
-                    <a href="https://www.spectrumnews.org/author/mayadaelsabbagh/">More</a></p>
+                    <a href="https://www.thetransmitter.org/contributor/mayada-elsabbagh/">More</a></p>
                 </div>
                 <div class="bio">
                     <h4>Eric Fombonne</h4>
                     <h5>Director of autism research, Oregon Health and Science University</h5>
                     <p>Eric Fombonne is director of autism research at the Institute on Development and Disability at Oregon Health and Science University. His research on developmental disorders and child and adolescent psychiatric disorders encompasses clinical longitudinal and population-based epidemiological studies, clinical trials and genetic studies.<br>
-                    <a href="https://www.spectrumnews.org/author/ericfombonne/">More</a></p>
+                    <a href="https://www.thetransmitter.org/contributor/eric-fombonne/">More</a></p>
                 </div>
                 <div class="bio">
                     <h4>Catherine Rice</h4>
                     <h5>Director, Emory Autism Center</h5>
                     <p>Catherine Rice is director of the Emory Autism Center and professor of psychiatry and behavioral sciences at Emory University in Atlanta, Georgia. Prior to that, she led studies of autism prevalence at the U.S. Centers for Disease Control and Prevention.&nbsp; She continues to provide expert consultation to the agency on determining autism case status and improving developmental and autism screening in the community.<br>
-                    <a href="https://www.spectrumnews.org/author/cathyrice/">More</a></p>
+                    <a href="https://www.thetransmitter.org/contributor/catherine-rice/">More</a></p>
                 </div>
                 <p><strong>Cite this resource:&nbsp;</strong>https://doi.org/10.53053/NDWR8664</p>
                 <div id="end-row"></div>
@@ -181,5 +181,4 @@
 <!-- Custom JS
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <script src="{% static 'autism_prevalence_map/js/about.js' %}"></script>
-<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 {% endblock %}
