--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
@@ -14,7 +14,7 @@
 {% block body_block %}
 <!-- Main Container
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<div class='mt-32-75 h-screen'>    
+<div>    
     <!-- Map div
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <div id="map" class=""></div>
