TTWWW-466: Implementing more changes from code review - editing eslint config - editing node packages - removing unused vendor CSS - different method for conditional script and CSS loading 	modified:   static/autism_prevalence_map/eslint.config.mjs 	modified:   static/autism_prevalence_map/package.json 	deleted:    static/autism_prevalence_map/vendor/css/bootstrap.min.css 	deleted:    static/autism_prevalence_map/vendor/css/bootstrap.min.css.map 	deleted:    static/autism_prevalence_map/vendor/css/fa-all.css 	modified:   templates/autism_prevalence_map/about.html 	modified:   templates/autism_prevalence_map/base.html 	modified:   templates/autism_prevalence_map/list.html 	modified:   templates/autism_prevalence_map/map.html 	modified:   views.py

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
@@ -20,18 +20,12 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    {% if environment == 'development' %}
-        <link rel="stylesheet" type="text/css" href="{% static 'autism_prevalence_map/dist/main.css' %}">
-    {% else %}
-        <link rel="stylesheet" type="text/css" href="{% static 'autism_prevalence_map/dist/main.min.css' %}">
-    {% endif %}
+    {% static '' as static_base %}
+    <link rel="stylesheet" type="text/css" href="{{ static_base }}{{ style_sheet }}">
 
     {% block css_block %} {% endblock %}
 
     <link rel="icon" type="image/svg+xml" href="{% static 'autism_prevalence_map/img/favicon.svg' %}">
-
-    <style>.async-hide { opacity: 0 !important} </style>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BKVX7LHVRB"></script>
 
     <!-- Google Tag Manager -->
     <script>
@@ -116,11 +110,7 @@
     <script src="{% static 'autism_prevalence_map/vendor/js/popper.min.js' %}"></script>
     <script src="{% static 'autism_prevalence_map/vendor/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'autism_prevalence_map/vendor/js/d3.v5.min.js' %}"></script>
-    {% if environment == 'development' %}
-        <script src="{% static 'autism_prevalence_map/dist/main.js' %}"></script>
-    {% else %}
-        <script src="{% static 'autism_prevalence_map/dist/main.min.js' %}"></script>
-    {% endif %}
+    <script src="{{ static_base }}{{ script }}"></script>
 
     {% block js_block %} {% endblock %}
 </body>
