TTWWW-471: updated map style and tooltips in line with new design

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
@@ -54,7 +54,7 @@
 
 </head>
 
-<body class='font-sans'>
+<body class='font-sans bg-tan'>
 
     <nav class="navbar navbar-expand-xl fixed-top navbar-light spectrum-gradient">
         <div class="left">
@@ -98,7 +98,7 @@
         </div>
     </nav>
 
-    <main>
+    <main class="h-[calc(100vh_-_4.5rem)] pt-3 pb-4">
         {% block body_block %} {% endblock %}
     </main>
 
