--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
@@ -1,58 +1,59 @@
-<!-- Filter, download, help, share buttons
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<div id="action-buttons" class="action-buttons btn-group-vertical">
-    <button type="button" id="filters-link" class="btn action-button" data-toggle="tooltip" data-placement="top" title="Close fliter drawer"><i class="fas fa-ellipsis-v"></i></button>
-    <a role="button" id="download-link" class="btn action-button" href="#" data-toggle="tooltip" data-placement="top" title="Download data"><i class="fas fa-download"></i></a>
-    <a role="button" id="help-link" class="btn action-button" href="/about/#how-to-use" data-toggle="tooltip" data-placement="top" title="Help"><i class="fas fa-question-circle"></i></a>
-    <button type="button" id="copy-link" class="btn action-button" data-container="body" data-toggle="popover" data-placement="left" data-content="Link copied to the clipboard."><i class="fas fa-link"></i></button>
-</div>
+<div class="h-[5.875rem]">
+    <!-- Keyword search and dropdown menu form
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <div id="filter-list" class="card dropdown-keyword-search visible">
+        <div class="card-body">
+            <form class="form">
+                <div class="form-group">
+                    <label class="" for="studytype">Type of study</label>
+                    <select class="custom-select" id="studytype">
+                        <option value="">All</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label class="" for="prevalence">Prevalence</label>
+                    <select class="custom-select" id="prevalence">
+                        <option value="all">All</option>
+                        <option value="low">&lt;50</option>
+                        <option value="med">50-100</option>
+                        <option value="high">&gt;100</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label class="" for="samplesize">Sample size</label>
+                    <select class="custom-select" id="samplesize">
+                        <option value="all">All</option>
+                        <option value="low">&lt;10,000</option>
+                        <option value="med">10,000-100,000</option>
+                        <option value="high">&gt;100,000</option>
+                    </select>
+                </div>
+                
+                {% if template == "list" %}
+                <div class="form-group">
+                    <label class="" for="min_year" id="earliest-label"></label>
+                    <select class="custom-select" id="min_year">
+                        <option value="">Any</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label class="" for="max_year" id="latest-label"></label>
+                    <select class="custom-select" id="max_year">
+                        <option value="">Any</option>
+                    </select>
+                </div>
+                {% endif %}
+                <button type="button" id="clear-filters" class="btn btn-block spectrum-button">Clear filters</button>
+            </form>
+        </div>
+    </div>
 
-
-<!-- Keyword search and dropdown menu form
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<div id="filter-list" class="card dropdown-keyword-search visible">
-    <div class="card-body">
-        <form class="form">
-            <div class="form-group">
-                <label class="" for="studytype">Type of study</label>
-                <select class="custom-select" id="studytype">
-                    <option value="">All</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label class="" for="prevalence">Prevalence</label>
-                <select class="custom-select" id="prevalence">
-                    <option value="all">All</option>
-                    <option value="low">&lt;50</option>
-                    <option value="med">50-100</option>
-                    <option value="high">&gt;100</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label class="" for="samplesize">Sample size</label>
-                <select class="custom-select" id="samplesize">
-                    <option value="all">All</option>
-                    <option value="low">&lt;10,000</option>
-                    <option value="med">10,000-100,000</option>
-                    <option value="high">&gt;100,000</option>
-                </select>
-            </div>
-            
-            {% if template == "list" %}
-            <div class="form-group">
-                <label class="" for="min_year" id="earliest-label"></label>
-                <select class="custom-select" id="min_year">
-                    <option value="">Any</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label class="" for="max_year" id="latest-label"></label>
-                <select class="custom-select" id="max_year">
-                    <option value="">Any</option>
-                </select>
-            </div>
-            {% endif %}
-            <button type="button" id="clear-filters" class="btn btn-block spectrum-button">Clear filters</button>
-        </form>
+    <!-- Filter, download, help, share buttons
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <div id="action-buttons" class="action-buttons btn-group-vertical">
+        <button type="button" id="filters-link" class="btn action-button" data-toggle="tooltip" data-placement="top" title="Close fliter drawer"><i class="fas fa-ellipsis-v"></i></button>
+        <a role="button" id="download-link" class="btn action-button" href="#" data-toggle="tooltip" data-placement="top" title="Download data"><i class="fas fa-download"></i></a>
+        <a role="button" id="help-link" class="btn action-button" href="/about/#how-to-use" data-toggle="tooltip" data-placement="top" title="Help"><i class="fas fa-question-circle"></i></a>
+        <button type="button" id="copy-link" class="btn action-button" data-container="body" data-toggle="popover" data-placement="left" data-content="Link copied to the clipboard."><i class="fas fa-link"></i></button>
     </div>
 </div>
