TTWWW-467: made the header have a white background

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
@@ -54,9 +54,9 @@
 
 </head>
 
-<body class='font-sans h-screen pt-[4.5rem]'>
+<body class='font-sans pt-[4.5rem]'>
 
-    <nav class='navbar fixed top-0 w-full px-4 xl:px-10 py-5 border-b border-black'>
+    <nav class='navbar fixed top-0 w-full px-4 xl:px-10 py-5 border-b border-black bg-white'>
         <div class="flex justify-between items-center w-full mx-auto max-w-container">
             <div class='left flex items-center space-x-4 xl:space-x-8'>
                 <a class='navbar-brand max-w-logo flex items-center' href='https://www.thetransmitter.org/'>
