TTWWW-469: completed the primary styling for the filters

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
@@ -106,6 +106,7 @@
 {% block js_block %}
 <!-- Mapping JS libraries
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<script src="{% static 'autism_prevalence_map/vendor/js/jquery-ui.js' %}"></script>
 <script src="{% static 'autism_prevalence_map/vendor/js/topojson.js' %}"></script>
 <script src="{% static 'autism_prevalence_map/vendor/js/d3-array.v1.min.js' %}"></script>
 <script src="{% static 'autism_prevalence_map/vendor/js/d3-geo.v1.min.js' %}"></script>
