--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
@@ -9,13 +9,23 @@
             </select>
         </div>
         <div class="relative border border-med-navy rounded-sm bg-light-gray">
-            <label class="absolute top-1.75 left-3.75 text-xs text-med-navy uppercase" for="prevalence">Prevalence</label>
-            <select class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" id="prevalence">
-                <option value="all">All</option>
-                <option value="low">&lt;50</option>
-                <option value="med">50-100</option>
-                <option value="high">&gt;100</option>
-            </select>
+            <label class="absolute top-0.5 left-14.5 text-xs text-med-navy uppercase" for="prevalence-slider">Prevalence (per 10,000)</label>
+
+            <div class="prev-slider-inner flex">
+                <div class="prev-slider-input input min relative">
+                    <label class="absolute top-1.75 left-3 text-xs text-med-navy uppercase" for="prevalence-min">Min</label>
+                    <input type="text" id="prevalence-min" class="w-10.5 pt-5.2 pb-1.25 bg-light-navy-2 rounded-sm-l text-1xs text-center text-med-navy">
+                </div>
+                <div class="prev-slider-input slider relative w-63.75 pt-4.5 pb-4.5 pl-4 pr-4 border-l-0.5 border-r-0.5 border-med-navy">
+                    <div id="prevalence-slider"></div>
+                    <span class="sub-label absolute bottom-0.5 text-1xs text-med-navy uppercase">50</span>
+                    <span class="sub-label sub-label2 absolute bottom-0.5 right-3.75 text-1xs text-med-navy uppercase">150</span>
+                </div>
+                <div class="prev-slider-input input max relative">
+                    <label class="absolute top-1.75 left-2.75 text-xs text-med-navy uppercase" for="prevalence-max">Max</label>
+                    <input type="text" id="prevalence-max" class="w-10.5 pt-5.2 pb-1.25 bg-light-navy-2 rounded-sm-r text-1xs text-center text-med-navy">
+                </div>
+            </div>
         </div>
         <div class="relative border border-med-navy rounded-sm bg-light-gray">
             <label class="absolute top-1.75 left-3.75 text-xs text-med-navy uppercase" for="samplesize">Sample size</label>
@@ -26,22 +36,41 @@
                 <option value="high">&gt;100,000</option>
             </select>
         </div>
+        <div class="relative border border-med-navy rounded-sm bg-light-gray">
+            <label class="absolute top-1.75 left-3.75 text-xs text-med-navy uppercase" for="continent">Continent</label>
+            <select class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" id="continent">
+                <option value="all">All</option>
+                <option value="Africa">Africa</option>
+                <option value="Asia">Asia</option>
+                <option value="Europe">Europe</option>
+                <option value="North America">North America</option>
+                <option value="South America">South America</option>
+                <option value="Oceania">Oceania</option>
+            </select>
+        </div>
+        <div class="relative border border-med-navy rounded-sm bg-light-gray">
+            <label class="absolute top-1.75 left-3.75 text-xs text-med-navy uppercase" for="country">Country</label>
+            <select class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" id="country">
+                <option value="all">All</option>
+            </select>
+        </div>
         
         {% if template == "list" %}
-        <div class="form-group">
-            <label class="" for="min_year" id="earliest-label"></label>
-            <select class="custom-select" id="min_year">
+        <div class="relative border border-med-navy rounded-sm bg-light-gray">
+            <label class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" for="min_year" id="earliest-label"></label>
+            <select class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" id="min_year">
                 <option value="">Any</option>
             </select>
         </div>
         <div class="form-group">
-            <label class="" for="max_year" id="latest-label"></label>
-            <select class="custom-select" id="max_year">
+            <label class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" for="max_year" id="latest-label"></label>
+            <select class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" id="max_year">
                 <option value="">Any</option>
             </select>
         </div>
         {% endif %}
-        <button type="button" id="clear-filters" class="">Clear filters</button>
+
+        <button type="button" id="clear-filters" class="">Clear</button>
     </form>
 </div>
 
