TTWWW-471: updates so that dependencies are included via the main.ts file

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
@@ -4,6 +4,8 @@
 
 {% block title %}Spectrum | Global Autism Prevalence Map{% endblock %}
 
+{% block page_name %}about{% endblock %}
+
 {% block body_block %}
 <!-- Main Container
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -167,10 +169,4 @@
 {% endblock %}
 
 {% block modal_block %}
-{% endblock %}
-
-{% block js_block %}
-<!-- Custom JS
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<script src="{% static 'autism_prevalence_map/js/about.js' %}"></script>
 {% endblock %}
