--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
@@ -54,7 +54,7 @@
 
 </head>
 
-<body class='font-sans bg-tan'>
+<body class='font-sans bg-tan' data-page='{% block page_name %}{% endblock %}'>
 
     <nav class="navbar navbar-expand-xl fixed-top navbar-light spectrum-gradient">
         <div class="left">
